--- a/app/less/style-0-519.less
+++ b/app/less/style-0-519.less
@@ -1,27 +1,18 @@
-@fontsize_normal: 1.4em;
+@fontsize_normal: 1.2em;
 @fontsize_mini: @fontsize_normal * 0.7;
 @fontsize_topic: @fontsize_normal * 1.4;
 
-@header_height: 80px;
+@header_height: 70px;
 @input_padding: 16px;
 @radius: 5px;
 
 .header {
-	width: 80%;
-	padding: 0 10%;
+	width: 100%;
+	padding: 0;
 	height: @header_height;
-	display: flex;
-	z-index: 99;
-	background: transparent;
-	align-items: center;
-	justify-content: center;
 
 	a.logo-icon {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin-right: auto;
-
+		padding: 0 5%;
 		img {
 			padding: (@header_height / 4) 0;
 			height: @header_height - ((@header_height / 4) * 2);
@@ -29,218 +20,110 @@
 	}
 
 	.title {
-		color: @white_color;
 		font-size: @fontsize_normal;
-		margin-left: auto;
-		margin-right: auto;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		overflow: hidden;
-		flex: 1;
 
-		&:hover {
-			cursor: default;
+		&:first-child {
+			padding-left: 5%;
 		}
 	}
 
 	.btn-icon {
 		font-size: @fontsize_normal;
-		width: @header_height;
+		width: auto;
+		padding: 0 5%;
 		height: @header_height;
-		color: @white_color;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		text-decoration: none;
 	}
 
 	.btn-text {
 		font-size: @fontsize_mini;
-		text-decoration: none;
 		padding: (@header_height / 10) (@header_height / 4);
 		border-radius: @radius;
-		border: 2px solid @white_color;
-		color: @white_color;
-		box-sizing: border-box;
-		font-weight: bold;
+
+		&:last-child {
+			margin-right: 5%;
+		}
 	}
 }
 
 .container{
-	width: 60%;
-	margin: 0 20%;
+	width: 90%;
+	margin: 0 5%;
 
 	.box {
-		display: flex;
-		flex-direction: column;
-
-		&:last-child {
-			.device-list {
-				border-bottom: 0;
-			}
-		}
-
 		.head {
-			display: flex;
 			height: @header_height;
 			margin-bottom: @header_height / 8;
-			align-items: center;
 
 			.title {
 				font-size: @fontsize_topic;
-				color: @primary_color_font;
-				margin-right: auto;
-				white-space: nowrap;
-				overflow: hidden;
-				text-overflow: ellipsis;
-
-				&:hover {
-					cursor: default;
-				}
 			}
 
 			a {
 				font-size: @fontsize_mini;
-				text-decoration: none;
 				padding: (@header_height / 20) (@header_height / 4);
-				background: @primary_color_secondary;
-				color: @primary_color_font;
 				border-radius: @radius;
 			}
 		}
 		.device-list {
-			display: flex;
-			flex-flow: row wrap;
 			margin-bottom: @header_height / 2;
 
 			a.device-card {
-				width: 23%;
-				padding: 3%;
-				margin-right: 2.66%;
-				margin-bottom: 2.66%;
-				height: 170px;
-				text-decoration: none;
+				width: 47.5%;
+				padding: 5%;
+				margin-right: 5%;
+				margin-bottom: 5%;
+				height: 140px;
 				border-radius: @radius;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				background: @primary_color_secondary;
-				color: @primary_color_font;
-				box-sizing: border-box;
-				.transitionAnimation(0.3s);
-
-				&:hover {
-					transform: translateY(-5px);
-				}
 
 				&.create-button {
-					background: transparent;
-					border: 2px dashed @primary_color_font;
-					color: @primary_color_font;
 					font-size: @fontsize_normal;
-					align-items: center;
-					box-shadow: none;
-
-					&:hover {
-						transform: initial;
-					}
 				}
 
-				&:nth-child(4n+0) {
+				&:nth-child(2n+0) {
 					margin-right: 0%;
+				}
+				&:nth-child(4n+0) {
+					margin-right: inherit;
 				}
 				.name {	
 					font-size: @fontsize_normal;
-					text-overflow: ellipsis;
-					white-space: nowrap;
-					overflow: hidden;
 				}
 				.temp {
 					font-size: @fontsize_topic * 1.2;
-					font-weight: bold;
 				}
 				.info {
 					font-size: @fontsize_mini;
-					display: flex;
 
 					.updated {
 						font-size: @fontsize_mini;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-						overflow: hidden;
-						margin-right: auto;
 					}
 					.icon {
 						margin-left: 10px;
 					}
-				}
-
-				&.lostconnect {
-					background: @orange_color;
-					color: @white_color;
-					.info { color: @orange_color_font; }
-				}
-
-				&.active {
-					background: @green_color;
-					color: @white_color;
-					.info { color: @green_color_font; }
-				}
-				
-				&.alret {
-					background: @red_color;
-					color: @white_color;
-					.info { color: @red_color_font; }
-
-					-webkit-animation-name: bounce;
-					animation-name: bounce;
-					-webkit-animation-duration: 1s;
-					animation-duration: 1s;
-					-webkit-animation-delay: 1s;
-					animation-delay: 1s;
-					-webkit-animation-iteration-count:infinite;
-					animation-iteration-count:infinite;
 				}
 			}
 		}
 	}
 
 	.box-empty {
-		position: fixed;
-		top: 0;
-		left: 0;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		width: 40%;
-		margin: 0 30%;
-		height: 100%;
-		text-align: left;
+		width: 90%;
+		margin: 0 5%;
 
 		h1 {
 			font-size: @fontsize_topic;
-			color: @primary_color_font;
 			margin-bottom: 5px;
 		}
 		p {
 			font-size: @fontsize_normal;
 			margin-bottom: 30px;
-			color: @primary_color_font;
 		}
 
 		a {
-			width: 100%;
 			font-size: @fontsize_normal;
-			border: 0px;
 			padding: @input_padding 0;
-			margin: 0%;
-			margin-top: 15px;
+			margin-top: @input_padding;
 			border-radius: @radius;
-			background: @green_color;
 			font-size: @fontsize_normal;
-			font-weight: bold;
-			text-decoration: none;
-			text-align: center;
 		}
 	}
 }
@@ -251,12 +134,8 @@
 	margin-top: @header_height;
 
 	&.vertical-center {
-		justify-content: center;
-		position: fixed;
-		top: 0;
-		left: 0;
-		height: 100%;
-		margin: 0 30%;
+		position: initial;
+		margin: 5%;
 	}
 
 	&.login {
@@ -266,118 +145,40 @@
 
 		&.logout {
 			font-size: @fontsize_normal;
-			color: @white_color;
-			text-align: center;
 		}
 
 		p {
 			font-size: @fontsize_normal;
 			margin-bottom: @input_padding * 2;
-			color: @primary_color_font;
-
-			a {
-				color: @white_color;
-				font-weight: bold;
-			}
 		}
 	
 		.logo{
 			width: 25%;
 			margin-bottom: @input_padding * 2;
-			float: left;
-			display: block;
-	
-			img{
-				width: 100%;
-				float: left;
-				display: block;
-			}
 		}
 	}
 
 	.form-items {
-		display: flex;
-		flex-direction: column;
 		margin-bottom: @input_padding;
-
-		&.hidden {
-			display: none;
-		}
-
-		&:last-child {
-			margin-bottom: 0;
-		}
 
 		label {
 			font-size: @fontsize_mini;
-			color: @primary_color_font;
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
 			margin-bottom: 10px;
-			font-weight: bold;
 
 			i {
-				margin-left: 5px;
+				margin-left: 7px;
 			}
 
 			.label-button {
-					color: @primary_color_font;
-					text-decoration: none;
-					background: @primary_color_secondary;
-					padding: 0px 10px;
-					border-radius: @radius;
-					
-					&:hover {
-							cursor: pointer;
-					}
-			}
-
-			&:hover {
-				cursor: pointer;
+				padding: 0px 10px;
+				border-radius: @radius;
 			}
 		}
 
 		.input-text, .input-textarea {
-			width: 100%;
-			float: left;
-			display: block;
 			font-size: @fontsize_normal;
 			padding: (@input_padding / 1.5) @input_padding;
-			background: transparent;
-			color: @primary_color_font;
-			margin: 0%;
-			box-sizing: border-box;
-			border: 2px solid @primary_color_secondary;
-			resize: none;
-			outline: none;
 			border-radius: @radius;
-			font-weight: bold;
-			font-family: @font_family_maledpan;
-			.transitionAnimation(0.3s);
-			
-			&.loading {
-				background: transparent;
-				color: @primary_color;
-			}
-
-			&::placeholder {
-				color: @primary_color_secondary;
-			}
-
-			&:hover {
-				cursor: pointer;
-			}
-
-			&:focus {
-				color: @white_color;
-				border: 2px solid @white_color;
-			}
-
-			&:disabled {
-				background: @primary_color_secondary;
-				color: @primary_color_font;
-			}
 		}
 
 		.input-textarea {
@@ -385,162 +186,65 @@
 		}
 
 		.btn-submit {
-			width: 100%;
 			font-size: @fontsize_normal;
-			border: 0px;
 			padding: @input_padding 0;
-			margin: 0%;
 			margin-top: @input_padding;
 			border-radius: @radius;
-			background: @white_color;
-			color: @primary_color;
 			font-size: @fontsize_normal;
-			font-weight: bold;
-			margin-left: auto;
-			font-family: @font_family_maledpan;
 			line-height: 1.25em;
 
 			i {
 				margin-left: 10px;
-				font-size: 0.9em;
-			}
-			
-			&:hover {
-				cursor: pointer;
-			}
-			
-			&.loading {
-				background: @primary_color_secondary;
-				color: @primary_color_font;
-				box-shadow: none;
-			}
-
-			&.completed {
-				background: @primary_color_secondary;
-				color: @primary_color_font;
-				box-shadow: none;
-			}
-		}
-
-		.note {
-			color: @primary_color_font;
-			font-size: @fontsize_mini;
-			margin-top: 10px;
-
-			a {
-				color: @primary_color;
-				text-decoration: none;
-				font-weight: bold;
-
-				&:hover {
-					text-decoration: underline;
-				}
 			}
 		}
 
 		.inputs {
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-
 			.input-text {
-				width: 49%;
-				text-align: center;
-				flex-grow: unset;
+				width: 47.5%;
 			}
 		}
 
 		.lists {
-			display: flex;
-			flex-direction: column;
-			border: 2px solid @primary_color_secondary;
 			border-radius: @radius;
-			font-size: 1.2em;
+			font-size: @fontsize_normal;
 			margin-bottom: 10px;
 
 			.list-items {
-				display: flex;
-				flex-direction: row;
-				border-bottom: 1px solid @primary_color_secondary;
-
-				&:last-child {
-					border-bottom: 0;
-				}
 				.c {
 					width: 85%;
 					padding: 2.5% 3%;
-					text-overflow: ellipsis;
-					white-space: nowrap;
-					overflow: hidden;
-					color: @white_color;
 				}
 
 				.btn {
 					width: 15%;
-					text-align: center;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					color: @primary_color_secondary;
-
-					&:hover {
-						cursor: pointer;
-						color: @primary_color_font;
-					}
 				}
 			}
 		}
 	}
 
 	.toggle-items {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		line-height: 1em;
-		justify-content: space-between;
 		font-size: @fontsize_normal;
 		margin-bottom: 15px;
-		color: @white_color;
 
 		i {
 			font-size: @fontsize_normal * 1.25;
-			padding: 0;
-			color: @primary_color_secondary;
-
-			&.fa-toggle-on {
-				color: @white_color;
-				text-shadow: 1px 2px 3px rgba(0,0,0,0.2);
-			}
-
-			&:hover {
-				cursor: pointer;
-			}
 		}
 	}
 }
 
 .device-info{
-	width: 40%;
-	margin: @header_height 30%;
+	width: 90%;
+	margin: @header_height 5%;
 	margin-top: @header_height / 2;
-	display: flex;
-	flex-direction: column;
 
 	.info {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
 		margin-bottom: @header_height / 4;
 
 		.temperature-current {
-			line-height: 1.2em;
-			font-weight: bold;
-			color: @white_color;
 			margin-bottom: 10px;
 
 			.value {
-				font-size: @fontsize_topic * 4;
-				text-shadow: 3px 6px 15px rgba(0,0,0,0.1);
+				font-size: @fontsize_topic * 3;
 			}
 			.unit {
 				font-size: @fontsize_normal;
@@ -549,15 +253,9 @@
 
 		p {
 			font-size: @fontsize_mini;
-			color: @white_color;
-
 			i {
 				margin-left: 10px;
 			}
-		}
-
-		&:hover {
-			cursor: default;
 		}
 	}
 
@@ -568,25 +266,15 @@
 		margin-bottom: @header_height / 2;
 
 		.box {
-			width: 31.33%;
-			margin-right: 3%;
+			width: 30%;
+			margin-right: 5%;
 			padding: 0 5%;
-			height: 150px;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
+			height: 100px;
 			border-radius: @radius;
-			box-sizing: border-box;
-			color: @white_color;
-
-			&:nth-child(3n+0) {
-				margin-right: 0%;
-			}
 
 			div {
 				.value {
 					font-size: @fontsize_topic * 1.2;
-					line-height: 1.2em;
 				}
 				.unit {
 					font-size: @fontsize_mini;
@@ -595,120 +283,58 @@
 			p {
 				font-size: @fontsize_mini;
 			}
-
-			&:hover {
-				cursor: default;
-			}
 		}
 	}
 
 	h2 {
 		font-size: @fontsize_normal;
 		margin-bottom: 15px;
-		color: @white_color;
-		font-weight: normal;
 
 		i {
-			width: 35px;
+			width: 30px;
 		}
 	}
 	
 	.graph {
-		width: 100%;
-		display: flex;
 		height: 100px;
 		margin-bottom: @header_height / 2;
-		box-sizing: border-box;
-
-		canvas {
-			width: 100%;
-		}
 	}
 
-	.history{
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		box-sizing: border-box;
-
+	.history {
 		.logitems {
-			display: flex;
-			flex-direction: row;
-			align-items: center;
 			padding: 15px 0;
 			font-size: @fontsize_normal;
-			color: @white_color;
-			border-bottom: 1px dotted @primary_color_font;
-
-			&:last-child {
-				border-bottom: 0;
-			}
-
-			&:hover {
-				cursor: default;
-			}
-
-			&.alert {
-				.status {
-					color: @white_color;
-				}
-			}
 
 			.status {
-				width: 5%;
-				color: transparent;
+				width: 10%;
 				font-size: @fontsize_normal * 0.5;
 			}
-
 			.time {
-				width: 70%;
-				text-overflow: ellipsis;
-				white-space: nowrap;
-				overflow: hidden;
+				width: 55%;
 			}
 			.icon{
-				width: 5%;
-				text-align: right;
+				width: 10%;
 				font-size: @fontsize_normal * 0.5;
 			}
 			.temp {
-				width: 20%;
-				text-align: right;
-				font-weight: bold;
+				width: 25%;
 			}
 		}
-
 		.loading {
-			width: 100%;
 			padding: 15% 0;
-			display: flex;
-			justify-content: center;
 			font-size: @fontsize_normal;
-			font-style: italic;
-			color: @primary_color_font;
 		}
-
 		.empty {
-			width: 100%;
 			padding: 15% 0;
-			display: flex;
-			justify-content: center;
-			color: @primary_color_font;
 			font-size: @fontsize_normal;
-			font-style: italic;
 		}
 	}
 }
 
 .footer {
-	width: 60%;
-	margin: 0 20%;
-	margin-bottom: 2%;
-	color: @primary_color_font;
-	display: flex;
+	width: 90%;
+	margin: 5%;
 	font-size: @fontsize_mini;
-	flex-direction: row;
-	justify-content: space-between;
 
 	i {
 		margin-right: 5px;
@@ -716,110 +342,37 @@
 
 	a {
 		padding: 3px 10px;
-		text-decoration: none;
-		background: @primary_color_secondary;
-		color: @primary_color_font;
 		border-radius: @radius;
 	}
 }
-
-#progress-bar {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	width: 5%;
-	height: 3px;
-	background: @primary_color;
-	float: left;
-	display: block;
-	z-index: 100;
-	display: none;
-}
-
-
 #loading-bar {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 5%;
-	height: 3px;
+	height: 5px;
 	border-radius: @radius;
-	background: @white_color;
-	float: left;
-	display: block;
-	z-index: 100;
-
-	.transitionAnimation(10s);
-
-	&.action{
-		transform: translateX(1900%);
-	}
-}
-
-#filter {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-	float: left;
-	display: block;
-	z-index: 999;
-	-webkit-backdrop-filter: blur(5px);
-	backdrop-filter: blur(5px);
-	background: rgba(0,0,0,0.65);
-	display: none;
 }
 
 .message-box {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	width: 90%;
+	height: 90%;
+	margin: 5%;
 
 	.msg {
 		font-size: @fontsize_topic;
-		color: @primary_color_font;
 		margin-bottom: 25px;
-
-		strong {
-			color: @white_color;
-		}
 	}
 	.control {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-
 		p {
 			padding: 14px 0;
 			font-size: @fontsize_normal;
-			color: @primary_color_font;
 		}
 
 		a.btn {
-			text-decoration: none;
-			background: @white_color;
-			color: @primary_color;
 			font-size: @fontsize_normal;
 			padding: 14px 28px;
 			margin: 0 10px;
-			font-weight: bold;
 			border-radius: @radius;
-			display: block;
 
 			i {
 				margin-left: 15px;
-			}
-
-			&.btn-not-Accept {
-				background: @primary_color_secondary;;
-				color: @primary_color_font;
 			}
 		}
 	}
