--- a/app/css/style.css
+++ b/app/css/style.css
@@ -493,6 +493,9 @@ body.disconnect .border-color {
   float: left;
   display: block;
 }
+.form.login .logo-name {
+  font-size: 0.9799999999999999em;
+}
 .form .form-items {
   display: flex;
   flex-direction: column;
